--- a/css/main.css
+++ b/css/main.css
@@ -2,61 +2,79 @@ body {
     background-color: #FCFAF7;
     color: #000000;
     font-family: "neue-haas-grotesk-text", sans-serif;
-    font-size: 1.2rem; 
-    cursor: none;
-    cursor: url(../img/cursor.png), auto;
+    font-size: 2rem; 
+    /* cursor: none; */
+    /* cursor: url(../img/cursor.png), auto; */
 }
 
-/* cursor */
+/* cursor
 .rounded{
     width: 30px;
     height: 30px;
     fill: #EBFC72;
-}
+} */
 
 
 /* text */
+
 
 h1 {
     font-family: "swear-display-cilati", helvetica, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 3rem;
+    /* margin:0;
+    padding:0; */
 }
 
 h2 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 5rem;
+    font-size: 2rem;
+    /* margin:0;
+    padding:0; */
 }
 
 h3 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 2rem;
+    /* margin:0;
+    padding:0; */
 }
 
 h4 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.7rem;
+    /* margin:0;
+    padding:0; */
 }
 
 h5 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    /* margin:0;
+    padding:0; */
 }
 
 p{
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
     font-weight: 200;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 150%;
+}
+
+.p1 {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 150%;
 }
 
 code{
@@ -73,6 +91,25 @@ code{
     font-size: 3rem;
 }
 
+a {
+    color: #000000;
+    font-size: 1rem;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #FF5C00;
+    transition: ease-out 0.3s;
+    text-decoration: underline;
+}
+
+/* style guide font examples */
+
+
 /* spacing */
 
 .content-wrapper{
@@ -80,4 +117,19 @@ code{
     margin-left:10vw;
 
 }
+
+.padding-right {
+    padding-right: 2rem;
+}
+
+header{
+    margin-bottom:4rem;
+}
+
+.section-container {
+    max-width: 670px;
+    min-width: 200px;
+    margin-bottom: 5rem;
+}
+
 
