--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,8 @@ h1 {
 h2 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
-    font-weight: 600;
-    font-size: 2rem;
+    font-weight: 400;
+    font-size: 2.3rem;
     /* margin:0;
     padding:0; */
 }
@@ -68,13 +68,13 @@ p{
     font-style: normal;
     font-weight: 200;
     font-size: 1.2rem;
-    line-height: 150%;
+    line-height: 155%;
 }
 
 .p1 {
     font-size: 1rem;
     font-weight: 400;
-    line-height: 150%;
+    line-height: 155%;
 }
 
 code{
@@ -134,11 +134,20 @@ header{
 
 .styleguide-section-border{
     /* border:1px #FF5C00 solid; */
-    border-radius:20px;
-    background-color:#FCFAF7;
-    padding:2rem;
-    margin-bottom:2rem;
+    /* border-radius:20px; */
+    /* background-color:#FCFAF7; */
+    /* padding:2rem; */
+    margin-bottom:1rem;
 }
+
+/* .main-container{
+    min-height:100vh; 
+    display:flex; 
+    flex-direction:column; 
+    justify-content:space-between;
+} */
+
+
 
 /* .styleguide-link{
     margin-right:2rem;
