--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ p{
     line-height: 155%;
 }
 
+ul{
+    font-size: 1.2rem;
+}
+
 code{
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
