--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,165 +1,174 @@
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* main content wrapper */
-
 .container {
-    position: absolute;
-    left: 10vw;
-    right: 10vw;
-    top: 4rem;
+  position: absolute;
+  left: 10vw;
+  right: 10vw;
+  top: 4rem;
 }
 
 /* header/link organization */
-
 .box-header {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-
-    display: -webkit-flex;
-    display: -ms-flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    -webkit-align-items: baseline;
-    -ms-align-items: baseline;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  display: -ms-flex;
+  -ms-flex-direction: row;
+  -webkit-align-items: baseline;
+  -ms-align-items: baseline;
 }
 
 .box-header-title {
-    flex: 5 1 auto;
-    /* border:1px red solid; */
+  -webkit-box-flex: 5;
+      -ms-flex: 5 1 auto;
+          flex: 5 1 auto;
+  /* border:1px red solid; */
 }
 
 .box-header-link {
-    flex: 1 1 auto;
-    justify-content: right;
-    max-width: 100px;
-    -webkit-flex: 1 1 auto;
-    -ms-flex: 1 1 auto;
-    -webkit-justify-content: right;
-    -ms-justify-content: row;
+  -webkit-box-flex: 1;
+          flex: 1 1 auto;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  max-width: 100px;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  -webkit-justify-content: right;
+  -ms-justify-content: row;
 }
 
-
 /* images */
-
 .image-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 3rem;
-
-    display: -webkit-flex;
-    display: -ms-flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-
-    -webkit-align-items: center;
-    -ms-align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 3rem;
+  display: -ms-flex;
+  -ms-flex-direction: column;
+  -webkit-align-items: center;
+  -ms-align-items: center;
 }
 
 .image-caption {
-    align-self: flex-end;
-    margin-bottom: 1rem;
-    -webkit-align-self: flex-end;
-    -ms-align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin-bottom: 1rem;
+  -webkit-align-self: flex-end;
+  -ms-align-self: flex-end;
 }
 
-@media screen and (max-width:800px) {
-    .image-caption-box {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1rem;
-        width: 80vw;
-
-        display: -webkit-flex;
-        display: -ms-flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-    }
-
-    .banner-image-box {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1rem;
-        width: 80vw;
-
-        display: -webkit-flex;
-        display: -ms-flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-    }
-}
-
-@media screen and (min-width:800px) {
-    .image-caption-box {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1rem;
-        width: 45vw;
-
-        display: -webkit-flex;
-        display: -ms-flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-    }
-
-    .banner-image-box {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1rem;
-        width: 80vw;
-
-        display: -webkit-flex;
-        display: -ms-flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-    }
-}
-
-/* video */
-
-.video-box {
+@media screen and (max-width: 800px) {
+  .image-caption-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
     margin-bottom: 1rem;
     width: 80vw;
-
-    display: -webkit-flex;
     display: -ms-flex;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
+  }
+  .banner-image-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    margin-bottom: 1rem;
+    width: 80vw;
+    display: -ms-flex;
+    -ms-flex-direction: column;
+  }
+}
+@media screen and (min-width: 800px) {
+  .image-caption-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    margin-bottom: 1rem;
+    width: 45vw;
+    display: -ms-flex;
+    -ms-flex-direction: column;
+  }
+  .banner-image-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    margin-bottom: 1rem;
+    width: 80vw;
+    display: -ms-flex;
+    -ms-flex-direction: column;
+  }
+}
+/* video */
+.video-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  margin-bottom: 1rem;
+  width: 80vw;
+  display: -ms-flex;
+  -ms-flex-direction: column;
 }
 
 .iframe-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; 
-    height: 0;
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
 }
 
-  .iframe-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
-
 
 .box-footer {
-    flex-direction: column;
-    justify-content: flex-start;
-
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -webkit-justify-content: flex-start;
-    -ms-justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-direction: column;
+  -webkit-justify-content: flex-start;
+  -ms-justify-content: flex-start;
 }
 
 .box-footer-project {
-    padding-bottom: 2rem;
+  padding-bottom: 2rem;
 }
