--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -14,7 +14,7 @@
 }
 
 /* header/link organization */
-.box-header {
+.link-stack {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,7 +34,6 @@
   -webkit-box-flex: 5;
       -ms-flex: 5 1 auto;
           flex: 5 1 auto;
-  /* border:1px red solid; */
 }
 
 .box-header-link {
@@ -48,6 +47,23 @@
   -ms-flex: 1 1 auto;
   -webkit-justify-content: right;
   -ms-justify-content: row;
+}
+
+/* project organizaiton */
+.box-project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  display: -ms-flex;
+  -ms-flex-direction: row;
+  -webkit-align-items: baseline;
+  -ms-align-items: baseline;
 }
 
 /* images */
@@ -101,6 +117,31 @@
     display: -ms-flex;
     -ms-flex-direction: column;
   }
+  .box-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
+    display: -ms-flex;
+    -ms-flex-direction: row;
+  }
+  .link-stack {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
+    display: -ms-flex;
+    -ms-flex-direction: column;
+    -webkit-align-items: left;
+    -ms-align-items: left;
+  }
 }
 @media screen and (min-width: 800px) {
   .image-caption-box {
@@ -126,6 +167,21 @@
     width: 80vw;
     display: -ms-flex;
     -ms-flex-direction: column;
+  }
+  .box-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    display: -ms-flex;
+    -ms-flex-direction: row;
+    -webkit-align-items: baseline;
+    -ms-align-items: baseline;
   }
 }
 /* video */
