--- a/css/flexbox.scss
+++ b/css/flexbox.scss
@@ -13,9 +13,11 @@
     top: 4rem;
 }
 
+
 /* header/link organization */
 
-.box-header {
+
+.link-stack {
     display: flex;
     flex-direction: row;
     align-items: baseline;
@@ -30,7 +32,6 @@
 
 .box-header-title {
     flex: 5 1 auto;
-    /* border:1px red solid; */
 }
 
 .box-header-link {
@@ -41,6 +42,21 @@
     -ms-flex: 1 1 auto;
     -webkit-justify-content: right;
     -ms-justify-content: row;
+}
+
+/* project organizaiton */
+
+.box-project {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+
+    display: -webkit-flex;
+    display: -ms-flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-align-items: baseline;
+    -ms-align-items: baseline;
 }
 
 
@@ -92,7 +108,32 @@
         -webkit-flex-direction: column;
         -ms-flex-direction: column;
     }
+
+    .box-header {
+        display: flex;
+        flex-direction: row;
+    
+        display: -webkit-flex;
+        display: -ms-flex;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+    }
+
+    .link-stack {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+    
+        display: -webkit-flex;
+        display: -ms-flex;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        -webkit-align-items: left;
+        -ms-align-items: left;
+    }
+
 }
+
 
 @media screen and (min-width:800px) {
     .image-caption-box {
@@ -118,6 +159,20 @@
         -webkit-flex-direction: column;
         -ms-flex-direction: column;
     }
+
+    .box-header {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+    
+        display: -webkit-flex;
+        display: -ms-flex;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+        -webkit-align-items: baseline;
+        -ms-align-items: baseline;
+    }
+
 }
 
 /* video */
