--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@ body {
 
 /* cursor */
 
+@media screen and (min-width:768px){
 /* I used this site as reference for the custom cursor
 https://www.codewithrandom.com/2023/02/22/custom-cursor-circle-cursor-using-html-css-javascript/
 */
@@ -23,20 +24,20 @@ https://www.codewithrandom.com/2023/02/22/custom-cursor-circle-cursor-using-html
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    // border: 1px solid black;
-    background-color:$highlight-colour;
     transition: all 200ms ease-out;
     position: fixed;
     pointer-events: none;
     left: 0;
     top: 0;
     transform: translate(calc(-50% + 15px), -50%);
-    }
+    mix-blend-mode:darken;
+}
 
     /* making cursor bigger when it hovers link or clicks*/
 .cursor-expand{
     width: 80px;
     height: 80px;
+}
 }
 
 
@@ -107,7 +108,11 @@ ul {
     font-size: 1.2rem;
     
     li{
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.8rem;
+    }
+
+    a{
+        font-size:1rem;
     }
     
 }
