--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -77,7 +77,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
   display: -ms-flex;
   -ms-flex-direction: column;
   -webkit-align-items: center;
@@ -134,6 +134,9 @@
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
             flex-direction: column;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     display: -ms-flex;
     -ms-flex-direction: column;
     -webkit-align-items: left;
@@ -224,4 +227,40 @@
 
 .box-footer-project {
   padding-bottom: 2rem;
+}
+
+/* for project overview */
+.project-overview-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.project-overview-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: baseline;
+      align-content: baseline;
+}
+
+.project-overview-item {
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
 }
