--- a/css/flexbox.scss
+++ b/css/flexbox.scss
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
 
     display: -webkit-flex;
     display: -ms-flex;
@@ -112,7 +112,7 @@
     .box-header {
         display: flex;
         flex-direction: row;
-    
+
         display: -webkit-flex;
         display: -ms-flex;
         -webkit-flex-direction: row;
@@ -123,7 +123,7 @@
         display: flex;
         flex-direction: column;
         align-items: left;
-    
+
         display: -webkit-flex;
         display: -ms-flex;
         -webkit-flex-direction: column;
@@ -164,7 +164,7 @@
         display: flex;
         flex-direction: row;
         align-items: baseline;
-    
+
         display: -webkit-flex;
         display: -ms-flex;
         -webkit-flex-direction: row;
@@ -217,4 +217,27 @@
 
 .box-footer-project {
     padding-bottom: 2rem;
+}
+
+
+/* for project overview */
+
+.project-overview-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.project-overview-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: baseline;
+}
+
+
+
+.project-overview-item {
+    align-self: baseline;
 }
