--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 $background-color: #FCFAF7;
-$link-hover-colour: #FF5C00;
+$accent-colour: #FF5C00;
 $highlight-colour: #EBFC72;
 $text-colour: #000000;
 
@@ -16,28 +16,28 @@ body {
 
 /* cursor */
 
-@media screen and (min-width:768px){
-/* I used this site as reference for the custom cursor
+@media screen and (min-width:768px) {
+
+    /* I used this site as reference for the custom cursor
 https://www.codewithrandom.com/2023/02/22/custom-cursor-circle-cursor-using-html-css-javascript/
 */
-.cursor {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    transition: all 200ms ease-out;
-    position: fixed;
-    pointer-events: none;
-    left: 0;
-    top: 0;
-    transform: translate(calc(-50% + 15px), -50%);
-    mix-blend-mode:darken;
-}
+    .cursor {
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        position: fixed;
+        pointer-events: none;
+        left: 0;
+        top: 0;
+        transform: translate(-50%, -50%);
+        mix-blend-mode: darken;
+    }
 
     /* making cursor bigger when it hovers link or clicks*/
-.cursor-expand{
-    width: 80px;
-    height: 80px;
-}
+    .cursor-expand {
+        width: 80px;
+        height: 80px;
+    }
 }
 
 
@@ -49,8 +49,6 @@ h1 {
     font-style: normal;
     font-weight: 600;
     font-size: 3rem;
-    // margin: 0;
-    // padding: 0;
 }
 
 h2 {
@@ -58,8 +56,6 @@ h2 {
     font-style: normal;
     font-weight: 400;
     font-size: 2.3rem;
-    // margin: 0;
-    // padding: 0;
 }
 
 h3 {
@@ -67,8 +63,6 @@ h3 {
     font-style: normal;
     font-weight: 400;
     font-size: 2rem;
-    // margin: 0;
-    // padding: 0;
 }
 
 h4 {
@@ -76,17 +70,13 @@ h4 {
     font-style: normal;
     font-weight: 400;
     font-size: 1.7rem;
-    // margin: 0;
-    // padding: 0;
 }
 
 h5 {
     font-family: "neue-haas-grotesk-text", sans-serif;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 1.3rem;
-    // margin: 0;
-    // padding: 0;
 }
 
 p {
@@ -106,15 +96,15 @@ p {
 
 ul {
     font-size: 1.2rem;
-    
-    li{
+
+    li {
         margin-bottom: 1.8rem;
     }
 
-    a{
-        font-size:1rem;
+    a {
+        font-size: 1rem;
     }
-    
+
 }
 
 code {
@@ -122,7 +112,7 @@ code {
     font-style: normal;
     font-weight: 200;
     font-size: 1rem;
-    color:#FF5C00;
+    color: $accent-colour;
 }
 
 .site-title {
@@ -143,10 +133,61 @@ a {
 }
 
 a:hover {
-    color: $link-hover-colour;
+    color: $accent-colour;
     transition: ease-out 0.3s;
     text-decoration: underline;
 }
+
+/* dropdown */
+
+.dropdown-button {
+    color: $text-colour;
+    font-size: 1rem;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1.5rem;
+    text-decoration: none;
+    background-color: $highlight-colour;
+    border-radius: 0.5rem;
+    padding: 1rem 2rem 1rem 2rem;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-size: 1.5rem;
+    font-weight:400;
+    border-radius: 0.5rem;
+  }
+  
+  .dropdown-content a {
+    color: $text-colour;
+    font-size: 1rem;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5rem;
+    text-decoration: none;
+    padding:1rem;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: $highlight-colour;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: white;}
 
 
 /* spacing */
@@ -168,7 +209,7 @@ header {
 .section-container {
     max-width: 670px;
     min-width: 200px;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 
 .styleguide-section-border {
@@ -196,6 +237,13 @@ header {
     margin-bottom: 10rem;
 }
 
+.small-margin-right {
+    margin-right: 1rem;
+}
+
+.medium-margin-right {
+    margin-right: 3rem;
+}
 
 
 
